# mdz

./: .gitignore  Cargo.toml  LICENSE  MDZ_SPEC.md  MDZ_SPEC_CN.md  README.md  README_CN.md
mdz-cli/: .gitignore  Cargo.toml  README.md  README_CN.md
mdz-cli/src/: cli.rs  main.rs
mdz-cli/src/commands/: create.rs  extract.rs  mod.rs  preview.rs  validate.rs
mdz-core/: .gitignore  Cargo.toml  README.md  README_CN.md
mdz-core/src/: error.rs  lib.rs  parser.rs  renderer.rs  validator.rs
