[package]
name = "mdz-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line tool for creating and managing MDZ (Markdown Zipped) documents"
license = "MIT"
repository = "https://github.com/your-username/mdz"

[dependencies]
mdz-core = { path = "../mdz-core" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
zip = "0.6"
