[package]
name = "mdz-core"
version = "0.1.0"
edition = "2021"
description = "Core library for parsing and rendering MDZ (Markdown Zipped) documents"
license = "MIT"
repository = "https://github.com/mdz-format/mdz"

[dependencies]
zip = "0.6"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
regex = "1.0"
